feat: sync user RAS status with ECM on signin